--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "esnext",
+    "target": "es5",
     "jsx": "preserve",
     "lib": ["dom", "es2015", "es2017"],
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -12,7 +12,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": false,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["./src/**/*"]
 }
