--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prism-themes": "^1.1.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
+    "react-background-video-player": "^1.1.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-three-fiber": "^4.0.11",
