--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^4.2.0",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
@@ -16,9 +17,9 @@
     "gatsby-transformer-sharp": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-background-video-player": "^1.1.6",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
-    "react-background-video-player": "^1.1.6"
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
