--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Dmytro Izotov <izotov.dima@gmail.com>",
   "dependencies": {
     "antd": "^4.2.0",
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-antd": "^2.2.0",
